unix/lang/tests/error/error_string_not_terminated.yab
#expect#---Error in error_string_not_terminated.yab, line 7:
#expect#---Error: String not terminated
#expect#   print "this string has no end
#expect#         ^~~~~~~~~~~~~~~~~~~~~~~~~
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed
print "this string has no end

